--- a/css/gpt.css
+++ b/css/gpt.css
@@ -43,6 +43,10 @@ main {
 }
 
 textarea {
+  resize: none;
+}
+
+.input-box textarea {
   all: unset;
   background: var(--gray-700);
   color: white;
@@ -50,6 +54,17 @@ textarea {
   border-radius: .9rem;
   font-size: 1rem;
   width: 46rem;
+}
+
+#modal textarea {
+  all: unset;
+  background: var(--gray-700);
+  color: white;
+  padding: 1rem 1rem;
+  border-radius: .9rem;
+  font-size: 1rem;
+  width: 30rem;
+  height: 20rem;
 }
 
 .footer {
@@ -185,4 +200,23 @@ textarea {
 .card:hover {
   background-color: var(--gray-800);
   border-radius: .5rem;
+}
+
+#modal {
+  position: absolute;
+  background: rgba(0,0,0,.7);
+  width: 100%;
+  height: 100%;
+}
+
+#modal .container {
+  background: var(--gray-900);
+  width: 40rem;
+  height: 30rem;
+  margin: 15rem auto auto;
+  border-radius: 1rem;
+}
+
+.hidden {
+  display: none;
 }
