create add card function

--- a/css/gpt.css
+++ b/css/gpt.css
@@ -253,6 +253,7 @@ textarea {
 
 .chat-card {
   width: 100%;
+  border-bottom: 1px solid rgba(32,33,35,.5);
 }
 
 .chat-card.gpt {
@@ -270,6 +271,7 @@ textarea {
 
 .chat-card .content {
   flex: 1;
+  text-align: start;
 }
 
 .chat-card .image {
